# mcctl

./: LICENSE  README.md  builddeb.sh  cc.ekblad.mcctl.conf  default.yaml  install.sh  mcctl.1  mcctl.cabal  mcctl.hs  mcctl.service  sample-instance.yaml  uninstall.sh
MCCtl/: Backend.hs  Config.hs  Frontend.hs  MiddleEnd.hs  Paths.hs
MCCtl/Config/: Parser.hs
debian/: changelog  control  copyright  mcctl.dirs  mcctl.install  mcctl.manpages  postinst
src/: mcctl.hs
src/MCCtl/: Args.hs  Backend.hs  Config.hs  DBus.hs  Frontend.hs  MiddleEnd.hs  Paths.hs
src/MCCtl/Config/: Parser.hs
