name:                mcctl
version:             0.1.0.0
synopsis:            DBus and command line control for your Minecraft server.
-- description:         
homepage:            https://github.com/valderman/mcctl
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mcctl
  main-is:
    mcctl.hs
  other-modules:
    MCCtl.Config
    MCCtl.Frontend
    MCCtl.Backend
    MCCtl.DBus
  other-extensions:
    OverloadedStrings
  build-depends:
    base >=4.6 && <4.8,
    dbus >=0.10,
    data-default >=0.5,
    bytestring >=0.10,
    process >=1.2,
    unix >=2.7,
    filepath >=1.3
  default-language:
    Haskell2010
