name:                mcctl
version:             0.1.0.0
synopsis:            DBus and command line control for your Minecraft server.
-- description:         
homepage:            https://github.com/valderman/mcctl
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mcctl
  main-is:
    mcctl.hs
  other-modules:
    MCCtl.Config
    MCCtl.Config.Parser
    MCCtl.Args
    MCCtl.Frontend
    MCCtl.MiddleEnd
    MCCtl.Backend
    MCCtl.DBus
    MCCtl.Paths
  other-extensions:
    OverloadedStrings
  build-depends:
    base >=4.6 && <4.8,
    dbus >=0.10,
    data-default >=0.5,
    bytestring >=0.10,
    process >=1.2,
    unix >=2.7,
    filepath >=1.3,
    yaml >= 0.8,
    directory >= 1.2,
    containers >= 0.5,
    time >= 1.4
  ghc-options:
    -Wall -Werror -O2
  default-language:
    Haskell2010
