name:                mcctl
version:             0.1.0.0
synopsis:            DBus and command line control for your Minecraft server.
-- description:         
homepage:            https://github.com/valderman/mcctl
license:             BSD3
license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mcctl
  hs-source-dirs:
    src
  main-is:
    mcctl.hs
  other-modules:
    MCCtl.Args
    MCCtl.Backend
    MCCtl.Config
    MCCtl.Config.Parser
    MCCtl.DBus
    MCCtl.Frontend
    MCCtl.MiddleEnd
    MCCtl.Paths
  other-extensions:
    OverloadedStrings
  build-depends:
    base         >= 4.8  && < 5,
    dbus         >= 0.10 && < 0.11,
    bytestring   >= 0.10 && < 0.11,
    process      >= 1.2  && < 1.5,
    unix         >= 2.7,
    filepath     >= 1.3,
    yaml         >= 0.8,
    directory    >= 1.2,
    containers   >= 0.5,
    time         >= 1.5 && < 1.7,
    utf8-string  >= 0.3
  ghc-options:
    -Wall -Werror -O2 -threaded
  ld-options:
    -z relro
  default-language:
    Haskell2010
